actualizando objetos y peliculas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Spiderman</li>
             <li>Animales fantásticos</li>
             <li>Batman</li>
-            <li>El hombre del Norte</li>
+            <li>Dr Strange en el multiverso de la locura</li>
         </ol>
     </main>
     <script src="./js/javascript.js"></script>
