--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
         <h1>Cinema JS</h1>
     </header>
     <main>
-        <h2>Compra tus entradas</h2>
-        <p>Las películas disponibles son:</p>
-        <ol>
-            <li>Spiderman</li>
-            <li>Animales fantásticos</li>
-            <li>Batman</li>
-            <li>Dr Strange en el multiverso de la locura</li>
-        </ol>
+        <h2>Bienvenid@</h2>    
     </main>
     <script src="./js/javascript.js"></script>
 </body>
