--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </header>
     <main>
         <h2>Bienvenid@</h2>
+
+        <input type="date" name="user_date" id="userDate" min="1930-01-01">
+        <p id="age"></p>
     </main>
     <script src="./js/javascript.js"></script>
 </body>
