agregando libreria SweetAlert2

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <main>
         <h2>Bienvenid@</h2>
 
-        <input type="date" name="user_date" id="userDate" min="1930-01-01">
-        <p id="age"></p>
+<!--         <input type="date" name="user_date" id="userDate" min="1930-01-01">
+        <p id="age"></p> -->
     </main>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/javascript.js"></script>
 </body>
 </html>
