agregando json y fetch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema JS</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -13,9 +14,12 @@
     <main>
         <h2>Bienvenid@</h2>
 
-        <input type="date" name="user_date" id="userDate" min="1930-01-01">
-        <p id="age"></p>
+<!--         <input type="date" name="user_date" id="userDate" min="1930-01-01">
+        <p id="age"></p> -->
+        <div id="text"></div>
+        <div id="card"></div>
     </main>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/javascript.js"></script>
 </body>
 </html>
