--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema JS</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -12,10 +13,19 @@
     </header>
     <main>
         <h2>Bienvenid@</h2>
-
-<!--         <input type="date" name="user_date" id="userDate" min="1930-01-01">
-        <p id="age"></p> -->
+        <div id="datos" class="datos">
+            <p>Por favor ingrese su fecha de nacimiento</p>
+            <input type="date" name="user_date" id="userDate" min="1930-01-01">
+            <p id="age"></p>
+            <button type="button" id="btnEdad">Aceptar</button>
+        </div>
+        <div id="text"></div>
+        <button type="button" id="btnInfo" style="display:none">Ver Info</button>
+        <div id="card" class="card"></div>
     </main>
+    <footer>
+        <div id="contacto"></div>
+    </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/javascript.js"></script>
 </body>
