agregados estilos y actualizada información del JSON

--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>Cinema JS</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
-        <h1>Cinema JS</h1>
+        <h1 class="header__title">Cinema JS</h1>
     </header>
     <main>
-        <h2>Bienvenid@</h2>
+        <h1 class="index__title">Bienvenid@</h1>
         <div id="datos" class="datos">
             <p>Por favor ingrese su fecha de nacimiento</p>
             <input type="date" name="user_date" id="userDate" min="1930-01-01">
             <p id="age"></p>
-            <button type="button" id="btnEdad">Aceptar</button>
+            <button type="button" id="btnEdad" class="button"> Aceptar </button>
         </div>
         <div id="text"></div>
-        <button type="button" id="btnInfo" style="display:none">Ver Info</button>
-        <div id="card" class="card"></div>
+        <button type="button" id="btnInfo" style="display:none" class="button"> Ver Info </button>
+        <div id="card" class="row row-cols-1 row-cols-md-4 g-5"></div>
+        
     </main>
     <footer>
         <div id="contacto"></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/javascript.js"></script>
 </body>
